# blitter-api/src/main/java/com/augtheo/blitter/author/AuthorController.java
@@ -4,13 +4,15 @@ import com.augtheo.blitter.api.RegisterApi;
 import com.augtheo.blitter.api.UsersApi;
 import com.augtheo.blitter.bleat.Bleat;
 import com.augtheo.blitter.bleat.BleatRepository;
-import com.augtheo.blitter.favourite.FavouriteService;
+import com.augtheo.blitter.favourite.LikeService;
 import com.augtheo.blitter.model.AuthorRes;
 import com.augtheo.blitter.model.BleatRes;
 import com.augtheo.blitter.model.RegisterReq;
 import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -18,7 +20,7 @@ import org.springframework.web.bind.annotation.RestController;
 public class AuthorController implements UsersApi, RegisterApi {
 
   private final AuthorService authorService;
-  private final FavouriteService favouriteService;
+  private final LikeService likeService;
 
   private final BleatRepository bleatRepository;
   private final PasswordEncoder passwordEncoder;
@@ -26,13 +28,52 @@ public class AuthorController implements UsersApi, RegisterApi {
   @Autowired
   AuthorController(
       AuthorService authorService,
-      FavouriteService favouriteService,
+      LikeService likeService,
       BleatRepository bleatRepository,
       PasswordEncoder passwordEncoder) {
     this.authorService = authorService;
-    this.favouriteService = favouriteService;
+    this.likeService = likeService;
     this.bleatRepository = bleatRepository;
     this.passwordEncoder = passwordEncoder;
+  }
+
+  @Override
+  public ResponseEntity<Void> createUser(RegisterReq registerReq) {
+    Author author =
+        new Author(
+            registerReq.getUsername(),
+            registerReq.getName(),
+            passwordEncoder.encode(registerReq.getPassword()));
+    authorService.registerAuthor(author);
+
+    return ResponseEntity.ok().build();
+  }
+
+  private Author getCurrentLoggedInAuthor() {
+    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+    return authorService.getAuthorByUsername(auth.getName());
+  }
+
+  @Override
+  public ResponseEntity<AuthorRes> getSelf() {
+    return ResponseEntity.ok(domainModelConverter(getCurrentLoggedInAuthor()));
+  }
+
+  @Override
+  public ResponseEntity<Void> followUser(String username) {
+
+    Author followee = authorService.getAuthorByUsername(username);
+    Author follower = getCurrentLoggedInAuthor();
+    authorService.followAuthor(followee, follower);
+    return ResponseEntity.ok().build();
+  }
+
+  // TODO: This should also be a paginated API
+  @Override
+  public ResponseEntity<List<AuthorRes>> getFollowingUsers(String username) {
+    return ResponseEntity.ok(authorService.getAuthorByUsername(username).getFollowing().stream()
+        .map(this::domainModelConverter)
+        .toList());
   }
 
   @Override
@@ -50,43 +91,69 @@ public class AuthorController implements UsersApi, RegisterApi {
   }
 
   @Override
+  public ResponseEntity<Void> unfollowUser(String username) {
+    Author followee = authorService.getAuthorByUsername(username);
+    Author follower = getCurrentLoggedInAuthor();
+    authorService.unFollowAuthor(followee, follower);
+    return ResponseEntity.ok().build();
+  }
+
+  @Override
   public ResponseEntity<List<BleatRes>> usersUsernameLikedGet(String username) {
     return ResponseEntity.ok(
-        favouriteService.getLikedBleats(authorService.getAuthorByUsername(username)).stream()
+        likeService.getLikedBleats(authorService.getAuthorByUsername(username)).stream()
             .map(this::domainModelConverter)
             .toList());
   }
 
+  private Author getCurrentAuthor() {
+    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+    Author currentAuthor = authorService.getAuthorByUsername(auth.getName());
+    return currentAuthor;
+  }
+
   private AuthorRes domainModelConverter(Author author) {
-    AuthorRes authorRes = new AuthorRes();
-    authorRes.setId(author.getId());
-    authorRes.setName(author.getName());
-    authorRes.setUsername(author.getUsername());
-    return authorRes;
+
+    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+    Author currentAuthor = authorService.getAuthorByUsername(auth.getName());
+
+    return AuthorRes.builder()
+        .id(author.getId())
+        .name(author.getName())
+        .username(author.getUsername())
+        .following(currentAuthor.getFollowing().contains(author))
+        .follows(currentAuthor.getFollowers().contains(author))
+        .followers(author.getFollowers().size())
+        .followees(author.getFollowing().size())
+        .profileUrl(author.getProfilePictureUri())
+        .build();
   }
 
   private BleatRes domainModelConverter(Bleat bleat) {
-    BleatRes bleatRes = new BleatRes();
-    bleatRes.setMessage(bleat.getMessage());
-    bleatRes.setAuthorName(bleat.getAuthor().getName());
-    bleatRes.setAuthorUsername(bleat.getAuthor().getUsername());
-    bleatRes.setMessage(bleat.getMessage());
-    bleatRes.setCreatedDate(bleat.getCreatedDate());
-    bleatRes.setLastModifiedDate(bleat.getLastModifiedDate());
-    bleatRes.setId(bleat.getId());
-    bleatRes.setLikeCount(bleat.getLikeCount());
-    return bleatRes;
+    return BleatRes.builder()
+        .message(bleat.getMessage())
+        .authorUsername(bleat.getAuthor().getUsername())
+        .authorName(bleat.getAuthor().getName())
+        .createdDate(bleat.getCreatedDate())
+        .lastModifiedDate(bleat.getLastModifiedDate())
+        .id(bleat.getId())
+        .likeCount(bleat.getLikeCount())
+        .replyCount(bleat.getReplyCount())
+        .authorProfileUrl(bleat.getAuthor().getProfilePictureUri())
+        .authorLiked(likeService.hasLiked(bleat.getId(), getCurrentAuthor().getId()))
+        .build();
   }
 
-  @Override
-  public ResponseEntity<Void> registerPost(RegisterReq registerReq) {
-    Author author =
-        new Author(
-            registerReq.getUsername(),
-            registerReq.getName(),
-            passwordEncoder.encode(registerReq.getPassword()));
-    authorService.registerAuthor(author);
-
-    return ResponseEntity.ok().build();
-  }
+  // private Author getCurrentAuthor() {
+  //   // FIXME Currently using two separate paths
+  //   Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+  //   Long id = null;
+  //   if (authentication instanceof Jwt) {
+  //     Jwt token = (Jwt) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+  //     id = token.getClaim("author_id");
+  //     return authorService.getAuthorById(id);
+  //   } else {
+  //     return authorService.getAuthorByUsername(authentication.getName());
+  //   }
+  // }
 }
